fix: adjust tint for contrast

--- a/m3.theme.css
+++ b/m3.theme.css
@@ -17,7 +17,7 @@
     --mod-strong: 14%;
     --mod-select: 16%;
 
-    --tint: 65%;
+    --tint: 80%;
     --scrim: 70%;
     
     /* Theme vars */
